update email address and fix button spacing

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -224,7 +224,7 @@ textarea {
     margin-bottom: var(--spacing-l);
   }
 
-  .button--link ~ .button--link {
+  .button--link + .button--link {
     margin-left: var(--spacing-s);
   }
 }
